--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml"
-    href="https://pbs.twimg.com/profile_images/1922483710185897986/q35tKv7r_400x400.jpg" />
+  <link rel="icon" type="image/png" href="favicon-96x96.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pirate-web3</title>
+  <title>Pirate-web3</title>
 </head>
 
 <body>
